--- a/index.html
+++ b/index.html
@@ -403,10 +403,25 @@
         </section>
         <!-- end blogs  -->
 
+        <!-- start newsbar  -->
+        <section>
+            <div class="ticker-wrap">
+                <div class="ticker">
+                    <div class="ticker__item">هذا النص هو مثال لنص يمكن أن يستبدل.</div>
+                    <div class="ticker__item">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص
+                        .</div>
+                    <div class="ticker__item">هذا النص هو مثال لنص يمكن أن يستبدل.</div>
+                    <div class="ticker__item">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص
+                        .</div>
+
+                </div>
+            </div>
+        </section>
+
 
     </main>
 
-
+    <!-- end newsbar -->
     <!-- start footer -->
 
     <footer id="footer" class=" wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.8s">
