--- a/index.html
+++ b/index.html
@@ -38,66 +38,66 @@
 <body>
 
     <!-- start header -->
-    <header class="wow fadeInUp " data-wow-duration="2s" data-wow-delay="0.3s">
-        <div class="top-header py-2">
-            <div class="container-fluid pe-sm-5">
-                <div class="row">
-                    <div class="col-xl-8 col-lg-7">
-                        <div class="ticker-wrap">
-                            <div class="ticker">
-                                <div class="ticker__item">هذا النص هو مثال لنص يمكن أن يستبدل.</div>
-                                <div class="ticker__item">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم
-                                    توليد
-                                    هذا
-                                    النص
-                                    .</div>
-                                <div class="ticker__item">هذا النص هو مثال لنص يمكن أن يستبدل.</div>
-                                <div class="ticker__item">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم
-                                    توليد
-                                    هذا
-                                    النص
-                                    .</div>
+    <header class="wow fadeInUp  " data-wow-duration="2s" data-wow-delay="0.3s">
+        <div class="top-header">
+            <div class="container-fluid container-lg">
+                <div class=" d-flex  justify-content-around align-items-center py-1">
 
+
+                    <div class="news-date w-100">
+                        <h6> السبت, أغسطس 10 2024 </h6>
+                    </div>
+
+                    <div class="argent-box me-3">
+                    </div>
+                    <div class="swiper mySwiper ">
+
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">هذا النص هو مثال لنص يمكن أن يستبدل.</div>
+                            <div class="swiper-slide">هذا النص هو مثال لنص يمكن أن يستبدل.</div>
+                            <div class="swiper-slide">هذا النص هو مثال لنص يمكن أن يستبدل.</div>
+                            <div class="swiper-slide">هذا النص هو مثال لنص يمكن أن يستبدل.</div>
+                            <div class="swiper-slide">هذا النص هو مثال لنص يمكن أن يستبدل.</div>
+                            <div class="swiper-slide">هذا النص هو مثال لنص يمكن أن يستبدل.</div>
+                        </div>
+                    </div>
+
+                    <div class="d-flex justify-content-end gap-5 align-items-center">
+                        <div class="d-flex align-items-center justify-content-center gap-1">
+                            <div class=" slidebtn button-next">
+                                <i class="bi bi-arrow-right-short"></i>
                             </div>
+                            <div class="slidebtn button-prev">
+                                <i class="bi bi-arrow-left-short"></i>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-center py-2 gap-2 contact-socil-icon">
+
+
+                            <a href="#">
+                                <div class="twitter-circle round-circle"><svg xmlns="http://www.w3.org/2000/svg"
+                                        viewBox="0 0 512 512">
+                                        <path
+                                            d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z" />
+                                    </svg></div>
+                            </a>
+                            <a href="#">
+                                <div class="linkedin-circle round-circle"><i class="bi bi-linkedin"></i></div>
+                            </a>
                         </div>
 
                     </div>
-                    <div class="col-xl-4 col-lg-5">
-                        <div
-                            class=" d-flex flex-column flex-sm-row justify-content-sm-end justify-content-center gap-sm-5 gap-1 align-items-center contact-us">
 
-                            <div class=" contact-num d-flex flex-column py-1  text-center text-sm-start">
-                                <p class="mb-1  text-white">هل لديك استفسار تواصل معنا</p>
-                                <h6 class=" fw-bolder text-white">+888-123-4567</h6>
-                            </div>
-                            <h6 class="text-white d-sm-block d-none">|</h6>
-                            <div class="d-flex align-items-center py-2 gap-2 contact-socil-icon">
-                                <a href="#">
-                                    <div class="facebook-circle round-circle"><i class="bi bi-facebook"></i></div>
-                                </a>
-                                <a href="#">
-                                    <div class="google-circle round-circle"><i class="bi bi-google"></i></div>
-                                </a>
-                                <a href="#">
-                                    <div class="twitter-circle round-circle"><svg xmlns="http://www.w3.org/2000/svg"
-                                            viewBox="0 0 512 512">
-                                            <path
-                                                d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z" />
-                                        </svg></div>
-                                </a>
-                                <a href="#">
-                                    <div class="linkedin-circle round-circle"><i class="bi bi-linkedin"></i></div>
-                                </a>
-                            </div>
-                        </div>
 
-                    </div>
+
+
+
+
                 </div>
-
-
 
             </div>
         </div>
+
 
         <nav class="navbar navbar-expand-lg position-relative   " id="myheader">
             <div class=" container  py-1">
