--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class=" d-flex  justify-content-around align-items-center py-1">
 
 
-                    <div class="news-date w-100">
+                    <div class="news-date d-none d-md-flex w-100">
                         <h6> السبت, أغسطس 10 2024 </h6>
                     </div>
 
@@ -62,7 +62,7 @@
                         </div>
                     </div>
 
-                    <div class="d-flex justify-content-end gap-5 align-items-center">
+                    <div class="  d-none d-md-flex justify-content-end gap-5 align-items-center">
                         <div class="d-flex align-items-center justify-content-center gap-1">
                             <div class=" slidebtn button-next">
                                 <i class="bi bi-arrow-right-short"></i>
