--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="container">
                 <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item  active">
+                        <a href="#" class="carousel-item  active">
                             <img src="images/img_7.png" class="d-block w-100 h-100 " alt="...">
                             <div class="carousel-caption ">
                                 <h6>منذ 4 أيام</h6>
@@ -187,24 +187,34 @@
                                     هذا النص هو مثال لنص يمكن أن يستبدل
                                 </p>
                             </div>
-                        </div>
-                        <div class="carousel-item">
+                        </a>
+                        <a href="#" class="carousel-item">
                             <img src="images/img_7.png" class="d-block w-100 " alt="...">
                             <div class="carousel-caption ">
                                 <h6>منذ 4 أيام</h6>
                                 <h5> هذا النص هو مثال </h5>
                                 <p>هذا النص هو مثال لنص يمكن أن يستبدل</p>
                             </div>
-                        </div>
-                        <div class="carousel-item">
+                        </a>
+                        <a href="#" class="carousel-item">
                             <img src="images/img_7.png" class="d-block w-100 " alt="...">
                             <div class="carousel-caption">
                                 <h6>منذ 4 أيام</h6>
                                 <h5> هذا النص هو مثال </h5>
                                 <p>هذا النص هو مثال لنص يمكن أن يستبدل.</p>
                             </div>
-                        </div>
+                        </a>
                     </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
 
                 </div>
             </div>
