--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                         <h6> السبت, أغسطس 10 2024 </h6>
                     </div>
 
-                    <div class="argent-box me-3">
-                    </div>
+                    <div class="argent-box me-3"> <i class="bi bi-lightning-charge-fill"></i> </div>
                     <div class="swiper mySwiper ">
 
                         <div class="swiper-wrapper">
@@ -176,47 +175,88 @@
         <!-- start land section -->
         <section id="landsection" class="slider wow fadeInUp mb-5 " data-wow-duration="2s" data-wow-delay="0.3s">
             <div class="container">
-                <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <a href="#" class="carousel-item  active">
-                            <img src="images/img_7.png" class="d-block w-100 h-100 " alt="...">
-                            <div class="carousel-caption ">
-                                <h6>منذ 4 أيام</h6>
-                                <h5> هذا النص هو مثال </h5>
-                                <p>هذا النص هو مثال لنص يمكن أن يستبدل
-                                    هذا النص هو مثال لنص يمكن أن يستبدل
-                                </p>
+                <div class="row">
+                    <div class="col-lg-8 mb-3">
+                        <div id="carouselExampleCaptions" class="carousel slide " data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <a href="#" class="carousel-item  active">
+                                    <img src="images/img_7.png" class="d-block w-100 h-100 " alt="...">
+                                    <div class="carousel-caption ">
+                                        <h6>منذ 4 أيام</h6>
+                                        <h5> هذا النص هو مثال </h5>
+                                        <p>هذا النص هو مثال لنص يمكن أن يستبدل
+                                            هذا النص هو مثال لنص يمكن أن يستبدل
+                                        </p>
+                                    </div>
+                                </a>
+                                <a href="#" class="carousel-item">
+                                    <img src="images/img_7.png" class="d-block w-100 " alt="...">
+                                    <div class="carousel-caption ">
+                                        <h6>منذ 4 أيام</h6>
+                                        <h5> هذا النص هو مثال </h5>
+                                        <p>هذا النص هو مثال لنص يمكن أن يستبدل</p>
+                                    </div>
+                                </a>
+                                <a href="#" class="carousel-item">
+                                    <img src="images/img_7.png" class="d-block w-100 " alt="...">
+                                    <div class="carousel-caption">
+                                        <h6>منذ 4 أيام</h6>
+                                        <h5> هذا النص هو مثال </h5>
+                                        <p>هذا النص هو مثال لنص يمكن أن يستبدل.</p>
+                                    </div>
+                                </a>
                             </div>
-                        </a>
-                        <a href="#" class="carousel-item">
-                            <img src="images/img_7.png" class="d-block w-100 " alt="...">
-                            <div class="carousel-caption ">
-                                <h6>منذ 4 أيام</h6>
-                                <h5> هذا النص هو مثال </h5>
-                                <p>هذا النص هو مثال لنص يمكن أن يستبدل</p>
-                            </div>
-                        </a>
-                        <a href="#" class="carousel-item">
-                            <img src="images/img_7.png" class="d-block w-100 " alt="...">
-                            <div class="carousel-caption">
-                                <h6>منذ 4 أيام</h6>
-                                <h5> هذا النص هو مثال </h5>
-                                <p>هذا النص هو مثال لنص يمكن أن يستبدل.</p>
-                            </div>
-                        </a>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                            <button class="carousel-control-prev" type="button"
+                                data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button"
+                                data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
 
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 mb-3">
+                        <div class=" writers-box  shadow p-5  d-flex flex-column">
+                            <div class="border-bottom pb-3 border-1">
+                                <h6 class="fw-bold">كتاب الموقع</h6>
+                            </div>
+                            <div class="d-flex flex-column ">
+                                <div class="w-box-flex">
+                                    <div class="w-img">
+                                        <img src="images/card1.png" class="img-fluid" alt="">
+                                    </div>
+                                    <a href="#">منصة إياس القانونية</a>
+                                </div>
+                                <div class="w-box-flex">
+                                    <div class="w-img">
+                                        <img src="images/card1.png" class="img-fluid" alt="">
+                                    </div>
+                                    <a href="#">منصة إياس القانونية</a>
+                                </div>
+                                <div class="w-box-flex">
+                                    <div class="w-img">
+                                        <img src="images/card1.png" class="img-fluid" alt="">
+                                    </div>
+                                    <a href="#">منصة إياس القانونية</a>
+                                </div>
+                                <div class="w-box-flex">
+                                    <div class="w-img">
+                                        <img src="images/card1.png" class="img-fluid" alt="">
+                                    </div>
+                                    <a href="#">منصة إياس القانونية</a>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
                 </div>
+
             </div>
         </section>
 
@@ -240,33 +280,33 @@
 
                 <div class="row  justify-content-center mt-5 ">
 
-                    <div class="col-lg-8">
+                    <div class="col-xl-8">
                         <div class="row">
                             <div class="col-md-6  mb-3">
-                                <div class="card">
+                                <div class="card border-0">
                                     <a href="#" class="card-img">
                                         <img src="images/card1.png" class="card-img-top img-fluid" alt="...">
                                     </a>
-                                    <div class="card-body ps-3 py-4">
+                                    <div class="card-body  ps-3 py-4">
                                         <div class="d-flex align-items-center justify-content-between ">
                                             <h6 class="mb-0">22 أكتوبر 2022</h6>
-                                            <span>مالي</span>
+                                            <span>تقني</span>
                                         </div>
 
                                         <a href="#" class="card-title">هذا النص هو مثال لنص يمكن أن يستبدل في نفس
                                             المساحة
                                         </a>
-                                        <p class="card-text lines2">
-                                            هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم
+                                        <p class="card-text lines2">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة،
+                                            لقد
+                                            تم
                                             توليد
-                                            هذا النص من مولد النص العربى، .
-                                        </p>
+                                            هذا النص من مولد النص العربى، .</p>
 
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-6  mb-3">
-                                <div class="card">
+                                <div class="card  border-0">
                                     <a href="#" class="card-img">
                                         <img src="images/card2.png" class="card-img-top img-fluid" alt="...">
                                     </a>
@@ -289,7 +329,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6  mb-3">
-                                <div class="card">
+                                <div class="card  border-0">
                                     <a href="#" class="card-img">
                                         <img src="images/card3.png" class="card-img-top img-fluid" alt="...">
                                     </a>
@@ -312,7 +352,7 @@
                                 </div>
                             </div>
                             <div class="col-md-6  mb-3">
-                                <div class="card">
+                                <div class="card  border-0">
                                     <a href="#" class="card-img">
                                         <img src="images/card1.png" class="card-img-top img-fluid" alt="...">
                                     </a>
@@ -337,8 +377,8 @@
                         </div>
 
                     </div>
-                    <div class="col-lg-4 ">
-                        <div class="d-flex flex-column gap-5">
+                    <div class="col-xl-4 ">
+                        <div class="d-flex flex-xl-column  flex-md-row flex-column  gap-5">
                             <div
                                 class="news-form d-flex flex-column justify-content-center text-center gap-3 align-items-center border border-1 p-3 py-5 rounded-2">
                                 <h5 class="  fw-bold" style="line-height: 40px;">
