--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
             </div>
         </section>
 
+
         <!-- end land section -->
 
         <!-- start cards section  -->
@@ -374,13 +375,59 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-md-6  mb-3">
+                                <div class="card  border-0">
+                                    <a href="#" class="card-img">
+                                        <img src="images/card3.png" class="card-img-top img-fluid" alt="...">
+                                    </a>
+                                    <div class="card-body  ps-3 py-4">
+                                        <div class="d-flex align-items-center justify-content-between ">
+                                            <h6 class="mb-0">22 أكتوبر 2022</h6>
+                                            <span>مالي</span>
+                                        </div>
+
+                                        <a href="#" class="card-title">هذا النص هو مثال لنص يمكن أن يستبدل في نفس
+                                            المساحة
+                                        </a>
+                                        <p class="card-text lines2">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة،
+                                            لقد
+                                            تم
+                                            توليد
+                                            هذا النص من مولد النص العربى، .</p>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6  mb-3">
+                                <div class="card  border-0">
+                                    <a href="#" class="card-img">
+                                        <img src="images/card1.png" class="card-img-top img-fluid" alt="...">
+                                    </a>
+                                    <div class="card-body  ps-3 py-4">
+                                        <div class="d-flex align-items-center justify-content-between ">
+                                            <h6 class="mb-0">22 أكتوبر 2022</h6>
+                                            <span>مالي</span>
+                                        </div>
+
+                                        <a href="#" class="card-title">هذا النص هو مثال لنص يمكن أن يستبدل في نفس
+                                            المساحة
+                                        </a>
+                                        <p class="card-text lines2">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة،
+                                            لقد
+                                            تم
+                                            توليد
+                                            هذا النص من مولد النص العربى، .</p>
+
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                     </div>
                     <div class="col-xl-4 ">
                         <div class="d-flex flex-xl-column  flex-md-row flex-column  gap-5">
                             <div
-                                class="news-form d-flex flex-column justify-content-center text-center gap-3 align-items-center border border-1 p-3 py-5 rounded-2">
+                                class="news-form d-flex flex-column justify-content-center text-center gap-5 align-items-center border border-1 p-3 py-5 rounded-2">
                                 <h5 class="  fw-bold" style="line-height: 40px;">
                                     ليصلك كل جديد
                                     رواد أعمال صدقيين وشركات ناشئة محلية
@@ -399,7 +446,7 @@
                                     </form>
                                 </div>
                             </div>
-                            <div class="tags  d-flex flex-column gap-5 border border-1 p-3 py-5 rounded-2 ">
+                            <div class="tags  d-flex flex-column gap-3 border border-1 p-3 py-5 rounded-2 ">
                                 <h4 style="color: #0F172A; font-weight: bold;"> التصنيفات :</h4>
                                 <div
                                     class=" d-flex justify-content-center text-center gap-3 align-items-center  flex-wrap">
